# Lab4

./: .gitignore  Makefile  README.MD  app.py  control.py  gui.py  main.py  pyproject.toml  setup.bat  test.py
.claude/: settings.local.json
chat/: chat.py  crypto.py  gui.py
chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: server.py
