[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat"
version = "1.0.0"
description = "Christopher Davissons lab4 P2P with relay server"
requires-python = ">=3.10"
authors = [{name = "Christopher Davisson" , email = "cdavisson58@ewu.edu"}]

dependencies = ["textual>=0.40.0"]

[project.scripts]
chat = "control:main"

[tool.setuptools]
packages = ["chat", "server"]
py-modules = ["control"]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 100